Fix: align justify

--- a/css/style.css
+++ b/css/style.css
@@ -1208,3 +1208,6 @@
 		.container.first{
 			margin-top : 4%;
 		}
+		p{
+			text-align: justify;
+		}
